--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@
 #result span{
     color: #ffff76;
 }
-@media (max-width: 400px){
+@media screen and (min-width: 300px) and (max-width: 600px) {
     .calc{
         margin-left: 5%;
         margin-top: 20%;
